--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+html {
+    background-image: url('C:\Users\thewi\Desktop\dCC Projects\Music-Library-Frontend\public\dan-stark-JiSNvVs3keU-unsplash.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+    background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    color: white;
+}
+header {
+    min-height: 8rem;
+    border: 5px solid red;
+    display: flex;
+    background-color: rgb(0,0,0,.75);
+    align-content: center;
+    align-items: center;
+    padding-left: 2rem;
+    font-weight: bold;
+    font-size: x-large;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-body {
+    display: flex;
+    margin-top: 10rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+div.music-table {
+    border: 5px solid blue;
+    /* background: white; */
+    display: flex;
+    margin: auto;
+    padding: 5rem;
+    background-color: rgb(192,192,192);
+    opacity: 0.6;
+    border-radius: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+div.search-bar {
+    border: 5px solid green;
+    /* background: white; */
+    display: flex;
+    margin: auto;
+    padding: 5rem;
+    background-color: rgb(192,192,192);
+    opacity: 0.6;
+    border-radius: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
