--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,14 @@ header {
 .app-body {
     display: flex;
     margin-top: 10rem;
+    gap: 1rem;
 }
 
-div.music-table {
+div.table-container {
     border: 5px solid blue;
     /* background: white; */
     display: flex;
-    margin: auto;
+    margin-right: auto;
     padding: 5rem;
     background-color: rgb(192,192,192);
     opacity: 0.6;
@@ -40,11 +41,15 @@ div.search-bar {
     border: 5px solid green;
     /* background: white; */
     display: flex;
-    margin: auto;
+    margin-left: auto;
     padding: 5rem;
     background-color: rgb(192,192,192);
     opacity: 0.6;
     border-radius: 15px;
+}
+
+table {
+    display: flex;
 }
 
 
