--- a/src/App.css
+++ b/src/App.css
@@ -27,15 +27,16 @@ header {
 }
 
 div.add-music {
-    border: 5px solid rgb(64, 145, 108);
-    /* background: white; */
-    /* display: flex; */
+    display: flex;
+    border: 4px solid rgb(64, 145, 108);
     margin-left: auto;
     padding: 5rem;
     background-color: rgb(0,0,0,.75);
-    /* opacity: 0.6; */
     border-radius: 15px;
+    max-height: 250px;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 div.form-container {
@@ -62,7 +63,7 @@ button {
 }
 
 div.table-container {
-    border: 5px solid rgb(64, 145, 108);
+    border: 4px solid rgb(64, 145, 108);
     background: white;
     display: flex;
     margin-right: auto;
@@ -73,12 +74,16 @@ div.table-container {
     flex-direction: column;
 }
 
+table {
+    border-collapse: collapse;
+}
+
 th, td {
     padding: 10px;
 }
 
 tr {
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid rgb(183, 228, 199);
 }
 
 label {
@@ -97,4 +102,8 @@ h4, th {
 button.add-music-button {
     margin-top: 1rem;
     padding: .35rem;
+}
+
+button.edit-delete {
+    margin: 10px 2px 0px 10px;
 }
